--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,32 @@ body {
 	font-family: 'Muli', sans-serif;
 }
 
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+.col-offset-0 {margin-left: 0;}
+.col-offset-1 {margin-left: 8.33%;}
+.col-offset-2 {margin-left: 16.66%;}
+.col-offset-3 {margin-left: 25%;}
+.col-offset-4 {margin-left: 33.33%;}
+.col-offset-5 {margin-left: 41.66%;}
+.col-offset-6 {margin-left: 50%;}
+.col-offset-7 {margin-left: 58.33%;}
+.col-offset-8 {margin-left: 66.66%;}
+.col-offset-9 {margin-left: 75%;}
+.col-offset-10 {margin-left: 83.33%;}
+.col-offset-11 {margin-left: 91.66%;}
+
 a:focus {
 	display: none;
 }
@@ -245,6 +271,7 @@ header > nav ul > li a:hover {
 
 .works .row {
 	display: flex;
+	align-items: center;
 	justify-content: center;
 	padding-bottom: 50px;
 	text-align: center;
@@ -356,3 +383,106 @@ header > nav ul > li a:hover {
 	text-align: center;
 	padding-top: 30px;
 }
+
+/* RWD */
+
+@media screen and (max-width: 768px) {
+
+[class*="col-"] {
+    width: 100%;
+    padding: 12px; 
+    float: left;
+}
+/* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+    
+/* header */
+header {
+   	height: auto;
+   	text-align: center;
+}
+	
+header > nav ul {
+  	float: none;
+}
+
+header > nav ul > li {
+	display: block;
+  	text-align: center;
+}
+
+header > nav img {
+	padding: 10px 0;
+}
+
+/* about */
+
+h2 {
+	margin-top: 50px;
+}
+
+/* works */
+
+.works .row {
+	flex-wrap: wrap;
+}
+
+.works .row img {
+	-webkit-transition: none;
+    transition: none;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.works .row img:hover {
+	-webkit-transform: none;
+    transform: none;
+}
+
+/* blue contact */
+
+.blue-contact {
+	height: auto;
+	text-align: center;
+	display: block;
+}
+
+.p-mail {
+	font-size: 25px;
+	margin-top: 0px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+
+.blue-contact .col-md-4 {
+	padding-top: 0px;
+}
+
+.blue-contact button {
+	padding-top: 0px;
+	margin-left: 0px;
+}	
+
+.icon-btn {
+	float: left;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+}
+
+.linkedin, .github, .google-plus {
+	font-size: 20px;
+}
+
+} /* end media screen */
